@@ -639,16 +639,7 @@ public:
     { return rep->ulong_value (req_int, frc_str_conv); }
 
   octave_idx_type
-  idx_type_value (bool req_int = false, bool frc_str_conv = false) const
-    {
-#if SIZEOF_OCTAVE_IDX_TYPE == SIZEOF_LONG
-      return long_value (req_int, frc_str_conv);
-#elif SIZEOF_OCTAVE_IDX_TYPE == SIZEOF_INT
-      return int_value (req_int, frc_str_conv);
-#else
-#error "no octave_value extractor for octave_idx_type"
-#endif
-    }
+  idx_type_value (bool req_int = false, bool frc_str_conv = false) const;
 
   double double_value (bool frc_str_conv = false) const
     { return rep->double_value (frc_str_conv); }
